--- a/style.css
+++ b/style.css
@@ -14,6 +14,17 @@ body {
     padding: 20px;
 }
 
+.header-img {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+.header-img img {
+    width: 50px;
+    height: 50px;
+    margin-top: 13px;
+}
+
 form {
     display:flex;
     justify-content:center;
